--- a/index.html
+++ b/index.html
@@ -7,46 +7,50 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <style>
         :root { --bg: #202025; --card: #2d2d35; --primary: #a29bfe; --text: #e0e0e0; }
-        body { font-family: sans-serif; background: var(--bg); color: var(--text); margin: 0; display: flex; justify-content: center; align-items: center; height: 100vh; }
-        .container { width: 95%; max-width: 600px; height: 80vh; background: var(--card); border-radius: 20px; display: flex; flex-direction: column; overflow: hidden; }
-        #chat-window { flex: 1; overflow-y: auto; padding: 20px; display: flex; flex-direction: column; gap: 10px; background: #25252e; }
-        .msg { background: #3a3a48; padding: 10px 15px; border-radius: 15px; width: fit-content; max-width: 80%; }
-        .u { font-size: 0.7em; color: var(--primary); font-weight: bold; margin-bottom: 3px; }
-        .input-area { padding: 20px; background: var(--card); display: flex; flex-direction: column; gap: 10px; }
-        input { padding: 12px; border-radius: 10px; border: 1px solid #444; background: #1e1e26; color: white; outline: none; }
-        button { padding: 12px; border-radius: 10px; border: none; background: var(--primary); color: #1e1e26; font-weight: bold; cursor: pointer; }
-        .error { border: 2px solid red !important; }
+        body { font-family: 'Inter', sans-serif; background: var(--bg); color: var(--text); margin: 0; display: flex; justify-content: center; align-items: center; height: 100vh; }
+        .container { width: 95%; max-width: 600px; height: 85vh; background: var(--card); border-radius: 25px; display: flex; flex-direction: column; overflow: hidden; box-shadow: 0 10px 30px rgba(0,0,0,0.5); }
+        #chat-window { flex: 1; overflow-y: auto; padding: 20px; display: flex; flex-direction: column; gap: 12px; background: #25252e; border-bottom: 1px solid #333; }
+        .msg { background: #3a3a48; padding: 12px 16px; border-radius: 18px; border-bottom-left-radius: 4px; width: fit-content; max-width: 80%; border: 1px solid rgba(255,255,255,0.05); }
+        .u { font-size: 0.75em; color: var(--primary); font-weight: bold; margin-bottom: 4px; text-transform: uppercase; }
+        .input-area { padding: 20px; background: var(--card); display: flex; flex-direction: column; gap: 12px; }
+        input { padding: 14px; border-radius: 12px; border: 1px solid #444; background: #1e1e26; color: white; outline: none; transition: 0.3s; }
+        input:focus { border-color: var(--primary); }
+        button { padding: 14px 25px; border-radius: 12px; border: none; background: var(--primary); color: #1e1e26; font-weight: bold; cursor: pointer; transition: 0.3s; }
+        button:hover { transform: translateY(-2px); opacity: 0.9; }
+        .error { border: 2px solid #ff7675 !important; }
     </style>
 </head>
 <body>
 
 <div class="container">
-    <div id="chat-window">Loading messages...</div>
+    <div id="chat-window">Menghubungkan ke server...</div>
     <div class="input-area">
-        <input type="text" id="username" placeholder="Nama..." maxlength="15">
+        <input type="text" id="username" placeholder="Masukkan Nama Kamu..." maxlength="15">
         <div style="display: flex; gap: 10px;">
-            <input type="text" id="message" placeholder="Pesan..." style="flex: 1;">
+            <input type="text" id="message" placeholder="Tulis pesan di sini..." style="flex: 1;">
             <button onclick="send()">Kirim</button>
         </div>
     </div>
 </div>
 
 <script>
+    // --- GANTI DENGAN DATA SUPABASE KAMU ---
     const SB_URL = "https://unyhtmyuvlkhfmwntgtq.supabase.co";
     const SB_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InVueWh0bXl1dmxraGZtd250Z3RxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzA5NzI2NDcsImV4cCI6MjA4NjU0ODY0N30.ChTXmZ6EPDNqno9AN3kzFRiktcWR5ZyEIe68qYheEZ4";
 
-    // Inisialisasi yang lebih aman
     const supabaseClient = window.supabase.createClient(SB_URL, SB_KEY);
-
     const chatWindow = document.getElementById('chat-window');
     const msgInput = document.getElementById('message');
     const nameInput = document.getElementById('username');
 
-    // Ambil data pertama kali
+    // Load pesan pertama kali
     async function load() {
-        const { data, error } = await supabaseClient.from('messages').select('*').order('created_at', { ascending: true });
+        console.log("Mencoba mengambil data...");
+        const { data, error } = await supabaseClient.from('messages').select('*').order('id', { ascending: true });
+        
         if (error) {
-            chatWindow.innerHTML = "Error: " + error.message;
+            console.error("Error Load:", error);
+            chatWindow.innerHTML = "Gagal memuat pesan: " + error.message;
         } else {
             chatWindow.innerHTML = '';
             data.forEach(render);
@@ -56,7 +60,7 @@
     function render(msg) {
         const div = document.createElement('div');
         div.className = 'msg';
-        div.innerHTML = `<div class="u">${msg.username}</div><div>${msg.content}</div>`;
+        div.innerHTML = `<div class="u">${msg.username || 'Anonim'}</div><div>${msg.content || ''}</div>`;
         chatWindow.appendChild(div);
         chatWindow.scrollTop = chatWindow.scrollHeight;
     }
@@ -65,23 +69,33 @@
         const user = nameInput.value.trim();
         const text = msgInput.value.trim();
 
-        if (!user) { nameInput.classList.add('error'); return; }
+        if (!user) {
+            nameInput.classList.add('error');
+            nameInput.focus();
+            return;
+        }
         nameInput.classList.remove('error');
         if (!text) return;
 
+        console.log("Mengirim pesan...");
         const { error } = await supabaseClient.from('messages').insert([{ username: user, content: text }]);
         
         if (error) {
+            console.error("Error Send:", error);
             alert("Gagal kirim: " + error.message);
         } else {
             msgInput.value = '';
+            console.log("Berhasil dikirim!");
         }
     }
 
-    // Realtime
-    supabaseClient.channel('any').on('postgres_changes', { event: 'INSERT', schema: 'public', table: 'messages' }, payload => {
+    // Fitur Realtime
+    supabaseClient.channel('custom-all-channel')
+    .on('postgres_changes', { event: 'INSERT', schema: 'public', table: 'messages' }, payload => {
+        console.log("Ada pesan baru masuk!");
         render(payload.new);
-    }).subscribe();
+    })
+    .subscribe();
 
     load();
 </script>
