--- a/index.html
+++ b/index.html
@@ -1,103 +1,84 @@
 <!DOCTYPE html>
-<html lang="id">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pufuta Chat Pro</title>
+    <title>Pufuta Chat</title>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <style>
-        :root { --bg: #202025; --card: #2d2d35; --primary: #a29bfe; --text: #e0e0e0; }
-        body { font-family: 'Inter', sans-serif; background: var(--bg); color: var(--text); margin: 0; display: flex; justify-content: center; align-items: center; height: 100vh; }
-        .container { width: 95%; max-width: 600px; height: 85vh; background: var(--card); border-radius: 25px; display: flex; flex-direction: column; overflow: hidden; box-shadow: 0 10px 30px rgba(0,0,0,0.5); }
-        #chat-window { flex: 1; overflow-y: auto; padding: 20px; display: flex; flex-direction: column; gap: 12px; background: #25252e; border-bottom: 1px solid #333; }
-        .msg { background: #3a3a48; padding: 12px 16px; border-radius: 18px; border-bottom-left-radius: 4px; width: fit-content; max-width: 80%; border: 1px solid rgba(255,255,255,0.05); }
-        .u { font-size: 0.75em; color: var(--primary); font-weight: bold; margin-bottom: 4px; text-transform: uppercase; }
-        .input-area { padding: 20px; background: var(--card); display: flex; flex-direction: column; gap: 12px; }
-        input { padding: 14px; border-radius: 12px; border: 1px solid #444; background: #1e1e26; color: white; outline: none; transition: 0.3s; }
-        input:focus { border-color: var(--primary); }
-        button { padding: 14px 25px; border-radius: 12px; border: none; background: var(--primary); color: #1e1e26; font-weight: bold; cursor: pointer; transition: 0.3s; }
-        button:hover { transform: translateY(-2px); opacity: 0.9; }
-        .error { border: 2px solid #ff7675 !important; }
+        body { font-family: sans-serif; background: #1e1e24; color: white; display: flex; justify-content: center; padding: 20px; }
+        .chat-box { width: 100%; max-width: 500px; background: #2d2d37; border-radius: 15px; display: flex; flex-direction: column; height: 80vh; overflow: hidden; }
+        #messages { flex: 1; overflow-y: auto; padding: 20px; display: flex; flex-direction: column; gap: 10px; }
+        .msg { background: #3e3e4a; padding: 10px; border-radius: 10px; width: fit-content; }
+        .user { color: #a29bfe; font-size: 0.8em; font-weight: bold; }
+        .inputs { padding: 20px; background: #25252e; display: flex; flex-direction: column; gap: 10px; }
+        input { padding: 12px; border-radius: 8px; border: 1px solid #444; background: #1e1e24; color: white; }
+        button { padding: 12px; border: none; border-radius: 8px; background: #a29bfe; color: #1e1e24; font-weight: bold; cursor: pointer; }
     </style>
 </head>
 <body>
 
-<div class="container">
-    <div id="chat-window">Menghubungkan ke server...</div>
-    <div class="input-area">
-        <input type="text" id="username" placeholder="Masukkan Nama Kamu..." maxlength="15">
-        <div style="display: flex; gap: 10px;">
-            <input type="text" id="message" placeholder="Tulis pesan di sini..." style="flex: 1;">
-            <button onclick="send()">Kirim</button>
-        </div>
+<div class="chat-box">
+    <div id="messages">Memuat pesan...</div>
+    <div class="inputs">
+        <input type="text" id="username" placeholder="Nama kamu...">
+        <input type="text" id="content" placeholder="Ketik pesan...">
+        <button id="btnKirim">Kirim</button>
     </div>
 </div>
 
 <script>
-    // --- GANTI DENGAN DATA SUPABASE KAMU ---
-    const SB_URL = "https://unyhtmyuvlkhfmwntgtq.supabase.co";
-    const SB_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InVueWh0bXl1dmxraGZtd250Z3RxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzA5NzI2NDcsImV4cCI6MjA4NjU0ODY0N30.ChTXmZ6EPDNqno9AN3kzFRiktcWR5ZyEIe68qYheEZ4";
+    // 1. MASUKKAN DATA KAMU DI SINI
+    const URL = "https://unyhtmyuvlkhfmwntgtq.supabase.co";
+    const KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InVueWh0bXl1dmxraGZtd250Z3RxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzA5NzI2NDcsImV4cCI6MjA4NjU0ODY0N30.ChTXmZ6EPDNqno9AN3kzFRiktcWR5ZyEIe68qYheEZ4";
 
-    const supabaseClient = window.supabase.createClient(SB_URL, SB_KEY);
-    const chatWindow = document.getElementById('chat-window');
-    const msgInput = document.getElementById('message');
-    const nameInput = document.getElementById('username');
+    // 2. Inisialisasi (Cara yang paling pasti jalan)
+    const supabase = window.supabase.createClient(URL, KEY);
 
-    // Load pesan pertama kali
-    async function load() {
-        console.log("Mencoba mengambil data...");
-        const { data, error } = await supabaseClient.from('messages').select('*').order('id', { ascending: true });
-        
+    const msgDiv = document.getElementById('messages');
+    const userInp = document.getElementById('username');
+    const contInp = document.getElementById('content');
+    const btn = document.getElementById('btnKirim');
+
+    // 3. Fungsi Tampil Pesan
+    function tampilkan(data) {
+        const d = document.createElement('div');
+        d.className = 'msg';
+        d.innerHTML = `<div class="user">${data.username}</div><div>${data.content}</div>`;
+        msgDiv.appendChild(d);
+        msgDiv.scrollTop = msgDiv.scrollHeight;
+    }
+
+    // 4. Ambil Data Awal
+    async function ambilPesan() {
+        const { data, error } = await supabase.from('messages').select('*').order('id', { ascending: true });
         if (error) {
-            console.error("Error Load:", error);
-            chatWindow.innerHTML = "Gagal memuat pesan: " + error.message;
+            msgDiv.innerHTML = "Error: " + error.message;
         } else {
-            chatWindow.innerHTML = '';
-            data.forEach(render);
+            msgDiv.innerHTML = "";
+            data.forEach(tampilkan);
         }
     }
 
-    function render(msg) {
-        const div = document.createElement('div');
-        div.className = 'msg';
-        div.innerHTML = `<div class="u">${msg.username || 'Anonim'}</div><div>${msg.content || ''}</div>`;
-        chatWindow.appendChild(div);
-        chatWindow.scrollTop = chatWindow.scrollHeight;
+    // 5. Fungsi Kirim
+    async function kirim() {
+        const u = userInp.value.trim();
+        const c = contInp.value.trim();
+        if (!u || !c) return alert("Isi nama dan pesan!");
+
+        const { error } = await supabase.from('messages').insert([{ username: u, content: c }]);
+        if (error) alert("Gagal: " + error.message);
+        else contInp.value = "";
     }
 
-    async function send() {
-        const user = nameInput.value.trim();
-        const text = msgInput.value.trim();
+    // 6. Realtime (Biar langsung muncul)
+    supabase.channel('room1').on('postgres_changes', { event: 'INSERT', schema: 'public', table: 'messages' }, payload => {
+        tampilkan(payload.new);
+    }).subscribe();
 
-        if (!user) {
-            nameInput.classList.add('error');
-            nameInput.focus();
-            return;
-        }
-        nameInput.classList.remove('error');
-        if (!text) return;
-
-        console.log("Mengirim pesan...");
-        const { error } = await supabaseClient.from('messages').insert([{ username: user, content: text }]);
-        
-        if (error) {
-            console.error("Error Send:", error);
-            alert("Gagal kirim: " + error.message);
-        } else {
-            msgInput.value = '';
-            console.log("Berhasil dikirim!");
-        }
-    }
-
-    // Fitur Realtime
-    supabaseClient.channel('custom-all-channel')
-    .on('postgres_changes', { event: 'INSERT', schema: 'public', table: 'messages' }, payload => {
-        console.log("Ada pesan baru masuk!");
-        render(payload.new);
-    })
-    .subscribe();
-
-    load();
+    btn.onclick = kirim;
+    ambilPesan();
 </script>
+
 </body>
 </html>
